<resources>
    <string name="app_name">picknumber</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules_of_game">Rules of Game. Count in you mind! Android Button widget is a UI element generally used to receive user actions as input. You can click on a Button, long press, etc.</string>
    <string name="start_game">Start game</string>
    <string name="count_in_mind">Count in mind!</string>
    <string name="game_level">Game Level</string>
    <string name="test">Test</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="question_mark">\?</string>
    <string name="try_again">try again</string>
    <string name="progress_answers">Right Answers %s (min Answers %s)</string>
    <string name="winner">WINNER!!!!</string>
    <string name="loser">Game lost:(</string>
    <string name="answers_to_win">You need %s answers</string>
    <string name="right_answers">%s right answers</string>
    <string name="percent_to_win">%s percent to win</string>
    <string name="right_percent">%s per right answers</string>
</resources>